Revise README for clarity and organization
Updated the README to enhance clarity and structure, including sections on project requirements, execution, results, and team roles.